# ctrl-cc

./: CLAUDE.md  index-dock.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: Ctrl-CC_Ultimate_Fix_Plan.md  ENGINEERING_PRINCIPLES.md  RUNTIME_ARCHITECTURE.md  UI_DESIGN_SYSTEM.md  V28_ACCEPTANCE_TESTS.md  architecture.md  claude-capability-probe.md  development-roadmap.md  runtime-audit.md  runtime-pty-first.md  surface-design.md  visual-language.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  main.rs
src-tauri/src/commands/: audit_export.rs  credential_guard.rs  db_commands.rs  discovery.rs  dock_commands.rs  file_lock.rs  fs_commands.rs  git_commands.rs  hooks_collector.rs  mod.rs  permission_center.rs  process_watcher.rs  risk_engine.rs  scanner.rs  session_replay.rs  statusline.rs  system_commands.rs  watchdog.rs  watcher.rs  worktree.rs
src-tauri/src/database/: mod.rs
src-tauri/src/diagnostics/: commands.rs  mod.rs  types.rs
src-tauri/src/pty/: mod.rs  pty_commands.rs  pty_log.rs  pty_manager.rs  pty_parser.rs  pty_session.rs  pty_types.rs
src-tauri/src/runtime/: claude_discovery.rs  claude_runner.rs  commands.rs  event_payloads.rs  event_types.rs  mod.rs  ndjson_parser.rs  pty_session.rs  runtime_types.rs  structured_runtime.rs
src-tauri/src/runtime_kernel/: claude_process.rs  commands.rs  manager.rs  mod.rs  output_classifier.rs  types.rs
src-tauri/src/runtime_v2/: chat_stream.rs  claude_command_resolver.rs  claude_discovery.rs  claude_launch_plan.rs  mod.rs  native_claude_discovery.rs  process_canary.rs  runtime_commands.rs  runtime_manager.rs  runtime_types.rs
src-tauri/src/setup/: commands.rs  config_writer.rs  detector.rs  error_resolver.rs  installer.rs  mod.rs  path_helper.rs  subprocess_runner.rs  task_manager.rs  types.rs
src-tauri/src/task_control/: commands.rs  manager.rs  mod.rs  types.rs
src-tauri/src/utils/: command_timeout.rs  hidden_command.rs  mod.rs
(+313 files in other folders)
